# KaSe_Code

./: .gitignore  README.md  reddit_post.md
project-name/: CMakeLists.txt  sdkconfig  sdkconfig.old
project-name/main/: CMakeLists.txt  ICSH044A.c  esp_hidd_prf_api.h  gc9a01.c  gc9a01.h  hid_bluetooth_manager.c  hid_bluetooth_manager.h  hid_dev.h  idf_component.yml  key_definitions.h  keyboard_config.h  keyboard_manager.c  keymap.c  keymap.h  keypress_handles.c  lv_conf.h  main.c  matrix.c  matrix.h  screen_manager.c  screen_manager.h  ssd1306_i2c_lcd_panel.c  tusb_hid_example_main.c
project-name/main/include/: ICSH044A.h  key_definitions.h  keyboard_manager.h  ssd1306_config.h
project/main/: key_definitions.h  keyboard_config.h  keymap.c  matrix.c  tusb_hid_example_main.c
